# ChangeLog for media-gfx/inkscape
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.128 2009/11/30 19:46:45 lxnay Exp $

  30 Nov 2009; Fabio Erculiani <lxnay@gentoo.org> inkscape-0.47.ebuild,
  metadata.xml:
  Remove automagic RDEPEND against media-libs/libwpg (no switch in
  configure)

*inkscape-0.47 (25 Nov 2009)

  25 Nov 2009; Markus Meier <maekke@gentoo.org> -inkscape-0.47_pre1.ebuild,
  -inkscape-0.47_pre2.ebuild, -inkscape-0.47_pre3.ebuild,
  -inkscape-0.47_pre4.ebuild, +inkscape-0.47.ebuild:
  bump to 0.47 final release, drop 47 pre-releases

*inkscape-0.47_pre4 (17 Oct 2009)

  17 Oct 2009; Markus Meier <maekke@gentoo.org> +inkscape-0.47_pre4.ebuild:
  bump

  05 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  inkscape-0.47_pre1.ebuild, inkscape-0.47_pre2.ebuild,
  inkscape-0.47_pre3.ebuild:
  Re-Keywording for ppc, bug 273966

*inkscape-0.47_pre3 (27 Sep 2009)

  27 Sep 2009; Markus Meier <maekke@gentoo.org> +inkscape-0.47_pre3.ebuild:
  version bump

*inkscape-0.47_pre2 (13 Sep 2009)

  13 Sep 2009; Markus Meier <maekke@gentoo.org> +inkscape-0.47_pre2.ebuild:
  version bump

  15 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  -inkscape-0.47_pre0.ebuild, inkscape-0.47_pre1.ebuild:
  Move boost from RDEPEND to DEPEND only, since only headers are used.

*inkscape-0.47_pre1 (04 Jul 2009)

  04 Jul 2009; Markus Meier <maekke@gentoo.org> inkscape-0.47_pre0.ebuild,
  +inkscape-0.47_pre1.ebuild:
  version bump, add a note to the 0.47 ebuilds that local configuration
  files are moved from ${HOME}/.inkscape to ${HOME}/.config/inkscape wrt bug
  #276155

  04 Jul 2009; Brent Baude <ranger@gentoo.org> inkscape-0.47_pre0.ebuild:
  Marking inkscape-0.47_pre0 ~ppc64 for bug 273966

  27 Jun 2009; Markus Meier <maekke@gentoo.org> inkscape-0.47_pre0.ebuild:
  specify libpng dep, add sci-libs/gsl dep wrt bug #274204
