@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX inkscape-0.46-bug-174720-0.patch 908 RMD160 ea73954482813cac9644d7dbe99c2f27d1ed9722 SHA1 354f42f93974519391492cda599887dbf89f24ea SHA256 0c42debc80f1cbc254a49f3a737bbadaa8a975d81a850b2448bd1267500ee66e
 AUX inkscape-0.46-bug-174720-1.patch 862 RMD160 c356fe9abfcc79575dcfe58b13240a7ad3939a00 SHA1 b6d3e2f821f0dc877ccb1ff3c5f751406daff767 SHA256 e038344cdb69176eaba5ff5f67e5eea5690608bd69e5b5e4e47b491d55a82394
 AUX inkscape-0.46-bug-214171.patch 952 RMD160 a946a3c2c191fe981c7756ffb9344c8da11f5291 SHA1 c7e492fcbebc8a417e61eb56f8bc70fe2e78eab5 SHA256 e4d74045d8e30289d6d7095461dbe3df083fd4fbc664f1944763bb6e71170226
@@ -8,7 +11,14 @@ AUX inkscape-0.46-glibc2.10.patch 4634 RMD160 d63d5e29efeda9412c37890664da8b788f
 AUX inkscape-0.46-poppler-0.8.3.patch 1571 RMD160 7f1ac72f9a9790f0b8df3b3c00da48896a884fba SHA1 16ee2bb1e56d260c3e0b30f8bcaee8a2b0963412 SHA256 ed4109b09c05da48c040923056eaf406b44ca0cf515e7b3396495182280fe24c
 DIST inkscape-0.46.tar.gz 18615326 RMD160 449e07fa4caa71f20025774353d19cad674631ac SHA1 b7c53c6d2bc0de4ff24d4a6bee86359ff11bef27 SHA256 91861e0d72228116d31e07192f77fe9e0968d4ed06499829b2d66e641496993a
 DIST inkscape-0.47.tar.gz 28044445 RMD160 58fe20b2a103bd8909e27811354e1a3700dcd177 SHA1 aa39d5f7306edb21be4987651041bf50c13baf75 SHA256 e5899be10183d86249516a29bc146706600ae5eafb5be5274c465a8029659b97
-EBUILD inkscape-0.46-r5.ebuild 2425 RMD160 84b9e051f7b12e8ceb329a4d3b04577fa9784f12 SHA1 7dfd8b737b46084597ae1c431532fe1cb152ac87 SHA256 9d3f36ca6fcf89878b7bc7587e09adb13077c2cf97c8fe2f7939b984879c4600
-EBUILD inkscape-0.47.ebuild 2236 RMD160 244145ebbbd8325bd6469f7fefbf5eff84f861e1 SHA1 e5bf0e5adfa1c4616c89e008dab8c572c500b0fe SHA256 bc8acc7cf1d0bedd1ceb1cc94c3345284493f45ee61f5e1caf1044d56d86807b
-MISC ChangeLog 17527 RMD160 ab72be3723e72d2c89fde52132195f53c615fea7 SHA1 aa0f07dce31d45c91234690fe318987c7d3ef1d2 SHA256 4796f33ca1ab4702e640ac4850ddc3d8e3554b4ce3f6ba774ec04de04fd71b44
+EBUILD inkscape-0.46-r5.ebuild 2450 RMD160 2c32b0094af219fb7d68d1e5a9182893f176421d SHA1 848945c00e65ab715c39255a63f221bb8e27fff1 SHA256 bcca3833135d54b96756ff7b1481641ce02e46d24285119c41003b1513f471c7
+EBUILD inkscape-0.47.ebuild 2265 RMD160 612e9f23703cdeef91fc1acdc59222dab8efcb1a SHA1 c3e2022bba518e476aa9684c98d624c5a5064677 SHA256 dbfea3cc1c363ab7c2b8f19f3b418606544f0a633724a7c01976f02b24adfe52
+MISC ChangeLog 17663 RMD160 3aecdd115edbffd1b850a4e971feb778ab062652 SHA1 dfe07373589aab526e2382a55266bddec61b2dd4 SHA256 81d9a80be25b354535e78ae1ba9d3edc66bbf549689b6b921ae13c54b04af426
 MISC metadata.xml 458 RMD160 90cb8f8058926fe666fc2dbec1af647248210f6c SHA1 9af2ef1f67bb9be6e9eecb2dc2f70badeb6277b1 SHA256 52763c744f2f6615fd6f900c3843356432ead07777ebdb548836b1e4fbed20ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksc5PEACgkQkKaRLQcq0GJ4LwCgjKX0aTJPX3/IYJgyAfIzvrbr
+48sAoIQYAYmZhIVnsJJysRIbLFHKcs84
+=AkCL
+-----END PGP SIGNATURE-----
