@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/inkscape-0.46-r5.ebuild,v 1.15 2009/07/15 15:59:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/inkscape-0.46-r5.ebuild,v 1.16 2009/12/07 11:18:43 maekke Exp $
 
 EAPI=2
 inherit eutils gnome2
@@ -28,7 +28,6 @@ COMMON_DEPEND="
 	>=dev-libs/libxslt-1.0.15
 	dev-libs/popt
 	dev-python/lxml
-	dev-python/pyxml
 	media-gfx/imagemagick
 	media-libs/fontconfig
 	>=media-libs/freetype-2
@@ -36,6 +35,7 @@ COMMON_DEPEND="
 	x11-libs/libXft
 	>=x11-libs/gtk+-2.10.7
 	>=x11-libs/pango-1.4.0
+	|| ( dev-lang/python[xml] dev-python/pyxml )
 	gnome? ( >=gnome-base/gnome-vfs-2.0 )
 	lcms? ( >=media-libs/lcms-1.14 )
 	perl? (
