@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/inkscape-0.47.ebuild,v 1.2 2009/11/30 19:46:45 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/inkscape-0.47.ebuild,v 1.3 2009/12/07 11:18:43 maekke Exp $
 
 EAPI=2
 inherit gnome2
@@ -29,7 +29,6 @@ COMMON_DEPEND="
 	>=dev-libs/libxslt-1.0.15
 	dev-libs/popt
 	dev-python/lxml
-	dev-python/pyxml
 	media-gfx/imagemagick
 	media-libs/fontconfig
 	>=media-libs/freetype-2
@@ -39,6 +38,7 @@ COMMON_DEPEND="
 	x11-libs/libXft
 	>=x11-libs/gtk+-2.10.7
 	>=x11-libs/pango-1.4.0
+	|| ( dev-lang/python[xml] dev-python/pyxml )
 	gnome? ( >=gnome-base/gnome-vfs-2.0 )
 	lcms? ( >=media-libs/lcms-1.14 )
 	spell? (
